setup code for gan inversion testing on cluster

--- a/environment.yml
+++ b/environment.yml
@@ -233,3 +233,4 @@ dependencies:
       - xarray==2023.4.2
       - y-py==0.5.9
       - ypy-websocket==0.8.2
+prefix: C:\Users\Alireza\miniconda3\envs\cosine-project
