--- a/.gitignore
+++ b/.gitignore
@@ -154,6 +154,7 @@ dmypy.json
 cython_debug/
 
 data/
+Models/
 
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
